added my skills images

--- a/index.html
+++ b/index.html
@@ -271,9 +271,9 @@
           <h2 class="h3 section-title">What My Programming Skills Included?</h2>
 
           <p class="section-text">
-            I develop simple, intuitive and responsive user interface that helps users get things done with less effort
-            and time
-            with those technologies.
+            I am a dedicated data analyst with a passion for transforming raw data into actionable insights. 
+            Proficient in statistical analysis, data visualization, and machine learning. Skilled in Python, SQL, and Tableau. 
+            Proven track record of developing data-driven strategies contributing to business growth..
           </p>
 
           <div class="skills-toggle" data-toggle-box>
@@ -290,7 +290,7 @@
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">HTML5</div>
+                <div class="tooltip">R</div>
 
                 <div class="card-icon">
                   <img src="./assets/images/html5.png" alt="HTML5 logo">
