--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         <div class="hero-content">
 
-          <h2 class="h2 hero-title">We Design & Build Creative Products</h2>
+          <h2 class="h2 hero-title">I help you get the most out of your data!</h2>
 
           <a href="#contact" class="btn btn-primary">Get in touch</a>
 
@@ -225,7 +225,7 @@
       <section class="about" id="about">
 
         <figure class="about-banner">
-          <img src="./assets/images/about-banner.png" alt="A man in a alice blue shirt with a thinking expression"
+          <img src="./assets/images/about.png" alt="A man in a alice blue shirt with a thinking expression"
             class="w-100">
         </figure>
 
@@ -236,12 +236,10 @@
           <h2 class="h3 section-title">Need a Creative Product? I can Help You!</h2>
 
           <p class="section-text">
-            Hi! I’m Jack Reacher, and I’m a developer who has passion for building clean web applications with intuitive
-            functionalities. I enjoy the process of turning ideas into reality using creative solutions. I’m always
-            curious about
-            learning new skills, tools, and concepts. In addition to working on various solo full stack projects, I have
-            worked with
-            creative teams, which involves daily stand-ups and communications, source control, and project management.
+            Hi! I’m Osigbemhe Odiodio, and I’m a Dedicated Data Engineer/ Data analyst with a passion for transforming raw data 
+            into actionable insights. Proficient in statistical analysis, data visualization, and machine learning. 
+            Skilled in Python, SQL, and Tableau. I have a Proven track record of developing data-driven strategies that can contribute to your business growth. 
+            Committed to staying abreast of industry trends. I'm excited about leveraging analytical skills to solve complex problems and drive innovation..
           </p>
 
           <div class="btn-group">
