removed original hero banner, changed the exp yrs

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
       <section class="hero" id="home">
 
-        <figure class="hero-banner">
+        <!--<figure class="hero-banner">
 
           <picture>
             <source srcset="./assets/images/hero-banner.png" media="(min-width: 768px)">
@@ -110,7 +110,7 @@
               class="w-100">
           </picture>
 
-        </figure>
+        </figure>-->
 
         <div class="hero-content">
 
@@ -171,7 +171,7 @@
               </div>
 
               <h2 class="h2 card-title">
-                12+ <strong>Years of Experience</strong>
+                2+ <strong>Years of Experience</strong>
               </h2>
 
               <ion-icon name="chevron-forward-outline"></ion-icon>
@@ -187,7 +187,7 @@
               </div>
 
               <h2 class="h2 card-title">
-                230+ <strong>Completed Projects</strong>
+                3+ <strong>Completed Projects</strong>
               </h2>
 
               <ion-icon name="chevron-forward-outline"></ion-icon>
@@ -203,7 +203,7 @@
               </div>
 
               <h2 class="h2 card-title">
-                95+ <strong>Happy Clients</strong>
+                10+ <strong>Recomendations</strong>
               </h2>
 
               <ion-icon name="chevron-forward-outline"></ion-icon>
@@ -266,12 +266,11 @@
 
           <p class="section-subtitle">My skills</p>
 
-          <h2 class="h3 section-title">What My Programming Skills Included?</h2>
+          <h2 class="h3 section-title">What My Programming Tools/Skills Included?</h2>
 
           <p class="section-text">
-            I am a dedicated data analyst with a passion for transforming raw data into actionable insights. 
-            Proficient in statistical analysis, data visualization, and machine learning. Skilled in Python, SQL, and Tableau. 
-            Proven track record of developing data-driven strategies contributing to business growth..
+            I am a dedicated data analyst with a passion for exploring the latest trends in technology
+            and utilizing the most efficient tools available to produce the desired results...
           </p>
 
           <div class="skills-toggle" data-toggle-box>
@@ -468,12 +467,6 @@
           </li>
           <li>
 
-            <button class="load-more">Load more work</button>
-          </li>
-
-
-
-          <li>
             <button class="load-more">Load more work</button>
           </li>
 
